<resources>
    <string name="app_name">BuckeyeConnection</string>
    <string name="text_osu_id">OSU ID</string>
    <string name="text_realname">Real Name</string>
    <string name="text_pwd">Password</string>
    <string name="text_pwd_conf">Confirm Password</string>
    <string name="text_nation">Nation</string>
    <string name="text_gender">Gender</string>
    <string name="text_major">Major</string>
    <string name="text_submit">Submit</string>
    <string name="text_credits">Credits</string>
    <string name="activity">Activity</string>
    <string name="moments">Moments</string>
    <string name="friends">Friends</string>
    <string name="settings">Setting</string>
    <string name="edit_info_button">Edit My Information</string>
    <string name="info_button">My Information</string>
    <string name="credits">My Credits</string>
    <string name="join_activity">Join Now</string>
    <string name="post">Post</string>
    <string name="realName">Name</string>
    <string name="default_input_hint">Type your message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="square">广场</string>
</resources>
