<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.buckeyeconnection.UserCenterActivity">

    <LinearLayout
        android:id="@+id/UserImageLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <ImageButton
            android:layout_width="165dp"
            android:layout_height="78dp"
            android:id="@+id/imageButton4"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/user_img"
            android:contentDescription="user_image"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:layout_below="@id/UserImageLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_button"
            android:id="@+id/btn_"
            android:layout_marginTop="10dp"
            android:onClick="viewInfo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Activity"
            android:id="@+id/btn_acty"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_weight="0.16">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moments"
                android:id="@+id/moment_button"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:id="@+id/friend_button"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/moment_button"
                android:layout_toEndOf="@+id/moment_button"
                android:layout_alignParentLeft="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:id="@+id/event_button"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/friend_button"
                android:layout_toEndOf="@+id/friend_button" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/user_center_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="268dp"
        android:layout_marginStart="268dp" />

</RelativeLayout>
