<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.buckeyeconnection.InfoActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_osu_id"
            android:id="@+id/textOsuId"
            android:textAlignment="textEnd"
            android:layout_gravity="top|end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoOsuId"
            android:layout_marginLeft="20dp"
            android:text="yao.590" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_realname"
            android:id="@+id/textRealname"
            android:textAlignment="textEnd"
            android:layout_gravity="top|end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoRealname"
            android:layout_marginLeft="20dp"
            android:text="Jinjie Yao" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_nation"
            android:id="@+id/txtNation"
            android:textAlignment="textEnd"
            android:layout_gravity="center_vertical|end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoNation"
            android:layout_marginLeft="20dp"
            android:text="CN" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_gender"
            android:id="@+id/txtGender"
            android:textAlignment="textEnd"
            android:layout_gravity="center_vertical|end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoGender"
            android:layout_marginLeft="20dp"
            android:text="Male" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_major"
            android:id="@+id/textView"
            android:textAlignment="textEnd"
            android:layout_gravity="center_vertical|end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoMajor"
            android:layout_marginLeft="20dp"
            android:text="CSE" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_credits"
            android:id="@+id/textCredits"
            android:textAlignment="textEnd"
            android:layout_gravity="center_vertical|end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoCredits"
            android:layout_marginLeft="20dp"
            android:text="0" />
    </LinearLayout>

</LinearLayout>

</RelativeLayout>
