<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.buckeyeconnection.EditUserInfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_osu_id"
                android:id="@+id/textOsuId"
                android:textAlignment="textEnd"
                android:layout_gravity="top|end" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_name_text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_nation"
                android:id="@+id/txtNation"
                android:textAlignment="textEnd"
                android:layout_gravity="center_vertical|end" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/textView14"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnCty"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="10dp"
                    android:entries="@array/countries"
                    android:layout_marginTop="0dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_gender"
                android:id="@+id/txtGender"
                android:textAlignment="textEnd"
                android:layout_gravity="center_vertical|end" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:id="@+id/rbMale"
                    android:checked="false"
                    android:onClick="onSelect" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:id="@+id/rbFemale"
                    android:checked="false"
                    android:onClick="onSelect"
                    android:layout_marginLeft="30dp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_major"
                android:id="@+id/nation_textview"
                android:textAlignment="textEnd"
                android:layout_gravity="center_vertical|end" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spnMajor"
                android:spinnerMode="dropdown"
                android:layout_marginLeft="10dp"
                android:entries="@array/majors" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/text_submit"
                android:id="@+id/btn_sbmt"
                android:layout_gravity="center_horizontal"
                android:onClick="onRegister" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


